# libnavigate

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  configure  configure.ac  doxygen.conf  libnavigate.pc.cmake  replace
c++-bindings/: aam.cpp  ack.cpp  alm.cpp  alr.cpp  apb.cpp  bec.cpp  bod.cpp  bwc.cpp  bwr.cpp  bww.cpp  common.cpp  dtm.cpp  errors.cpp  gbs.cpp  generator.cpp  gga.cpp  gll.cpp  gns.cpp  grs.cpp  gsa.cpp  gst.cpp  gsv.cpp  mla.cpp  parser.cpp  rmc.cpp  sentence.cpp  txt.cpp  vtg.cpp  zda.cpp
c++-bindings/include/libnavigate/c++/: aam.hpp  ack.hpp  alm.hpp  alr.hpp  apb.hpp  bec.hpp  bod.hpp  bwc.hpp  bwr.hpp  bww.hpp  dtm.hpp  errors.hpp  gbs.hpp  generic.hpp  gga.hpp  gll.hpp  gns.hpp  grs.hpp  gsa.hpp  gst.hpp  gsv.hpp  mla.hpp  navigate.hpp  rmc.hpp  sentence.hpp  txt.hpp  vtg.hpp  zda.hpp
include/: iecgenerator.h  iecmessage.h  iecparser.h  navigate++  navigate++.hpp  navigate.h
include/libnavi/: iecgenerator.h  iecparser.h
include/libnavigate/: aam.h  ack.h  alm.h  alr.h  apb.h  bec.h  bod.h  bwc.h  bwr.h  bww.h  common.h  config.h  dtm.h  errors.h  gbs.h  generator.h  generic.h  gga.h  gll.h  gns.h  grs.h  gsa.h  gst.h  gsv.h  iecgenerator.h  iecmessage.h  iecparser.h  iecsentence.h  mla.h  parser.h  proprietarymsg.h  rmc.h  sentence.h  txt.h  vtg.h  zda.h
include/libnavigate/c++/: aam.hpp  ack.hpp  alm.hpp  alr.hpp  dtm.hpp  errors.hpp  gbs.hpp  generic.hpp  gga.hpp  gll.hpp  gns.hpp  grs.hpp  gsa.hpp  gst.hpp  gsv.hpp  mla.hpp  navigate.hpp  rmc.hpp  sentence.hpp  txt.hpp  vtg.hpp  zda.hpp
packaging/rpm/: libnavigate.spec
packaging/wix/: README.md  lgpl-3.0.rtf  libnavigate.wxs
src/: Makefile.am  Makefile.in  aam.c  ack.c  alm.c  alm.h  alr.c  apb.c  bec.c  bod.c  bwc.c  bwr.c  bww.c  common.c  common.h  config.c  dtm.c  dtm.h  errors.c  gbs.c  gbs.h  generator.c  gga.c  gga.h  gll.c  gll.h  gns.c  gns.h  grs.c  grs.h  gsa.c  gsa.h  gst.c  gst.h  gsv.c  gsv.h  iecgenerator.h  iecmessage.h  iecparser.h  mla.c  (+12 more)
src/win32/: nan.c  navigate.rc  round.c  win32navi.h
tests/: Makefile.am  Makefile.in  check_alm.c  check_mla.c  check_proprietary.c  check_query.c  entry.c  main.c  main.cpp
tests/tracks/: iec.track.0  iec.track.1  iec.track.2
