CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(navigate)

# Find required dependencies
INCLUDE_DIRECTORIES(include)

IF(MSVC)
	ADD_DEFINITIONS(-D_WIN32_WINNT=0x0500 -DWINVER=0x0500 -D_CRT_SECURE_NO_WARNINGS)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4")
ELSE()
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
ENDIF()

IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	FILE(GLOB SRC src/*.c src/win32/*.c src/win32/navigate.rc)
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
	FILE(GLOB SRC src/*.c)
ENDIF()

# Check if some parts of the library are not required
IF(NO_GENERATOR)
	ADD_DEFINITIONS(-DNO_GENERATOR)
ENDIF()

IF(NO_PARSER)
	ADD_DEFINITIONS(-DNO_PARSER)
ENDIF()

ADD_LIBRARY(navigate SHARED ${SRC})

IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
	TARGET_LINK_LIBRARIES(navigate m)
ENDIF ()

IF(BUILD_TESTS)
	ADD_EXECUTABLE(test tests/main.c)
	TARGET_LINK_LIBRARIES(test navigate)
	IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
		TARGET_LINK_LIBRARIES(test m)
	ENDIF ()
ENDIF()

