# CMake build script for the libnavigate
#
# Building (out of source build):
# mkdir build && cd build
# cmake [-G "Generator"] [-DSETTINGS=VALUE] ..
# cmake --build .

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(navigate)

# Prepare libnavigate version fields
FILE(STRINGS "src/version" LIBNAVIGATE_VERSION_IN)

STRING(REGEX MATCHALL "[0-9]+" LIBNAVIGATE_VERSION_LIST "${LIBNAVIGATE_VERSION_IN}")

LIST(GET LIBNAVIGATE_VERSION_LIST 0 LIBNAVIGATE_VERSION_MAJOR)
LIST(GET LIBNAVIGATE_VERSION_LIST 1 LIBNAVIGATE_VERSION_MINOR)
LIST(GET LIBNAVIGATE_VERSION_LIST 2 LIBNAVIGATE_VERSION_PATCH)
SET(LIBNAVIGATE_VERSION_STRING "${LIBNAVIGATE_VERSION_IN}")

FILE(READ "src/version.h.in" LIBNAVIGATE_VERSION_FILE)
STRING(REGEX REPLACE "\\$LIBNAVIGATE_VERSION_STRING\\$" "\"${LIBNAVIGATE_VERSION_STRING}\"" LIBNAVIGATE_VERSION_FILE ${LIBNAVIGATE_VERSION_FILE})
STRING(REGEX REPLACE "\\$LIBNAVIGATE_VERSION_MAJOR\\$" "${LIBNAVIGATE_VERSION_MAJOR}" LIBNAVIGATE_VERSION_FILE ${LIBNAVIGATE_VERSION_FILE})
STRING(REGEX REPLACE "\\$LIBNAVIGATE_VERSION_MINOR\\$" "${LIBNAVIGATE_VERSION_MINOR}" LIBNAVIGATE_VERSION_FILE ${LIBNAVIGATE_VERSION_FILE})
STRING(REGEX REPLACE "\\$LIBNAVIGATE_VERSION_PATCH\\$" "${LIBNAVIGATE_VERSION_PATCH}" LIBNAVIGATE_VERSION_FILE ${LIBNAVIGATE_VERSION_FILE})
FILE(WRITE "src/version.h" ${LIBNAVIGATE_VERSION_FILE})

# Find required dependencies
INCLUDE_DIRECTORIES(include)

IF(MSVC)
	ADD_DEFINITIONS(-D_WIN32_WINNT=0x0500 -DWINVER=0x0500 -D_CRT_SECURE_NO_WARNINGS)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4")
ELSE()
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
ENDIF()

IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	FILE(GLOB SRC src/*.c src/win32/*.c src/win32/navigate.rc)
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
	FILE(GLOB SRC src/*.c)
ENDIF()

# Check if some parts of the library are not required
IF(NO_GENERATOR)
	ADD_DEFINITIONS(-DNO_GENERATOR)
ENDIF()

IF(NO_PARSER)
	ADD_DEFINITIONS(-DNO_PARSER)
ENDIF()

ADD_LIBRARY(navigate SHARED ${SRC})

IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
	TARGET_LINK_LIBRARIES(navigate m)
ENDIF ()

IF(BUILD_TESTS)
	ADD_EXECUTABLE(test tests/main.c)
	TARGET_LINK_LIBRARIES(test navigate)
	IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
		TARGET_LINK_LIBRARIES(test m)
	ENDIF ()
ENDIF()
